[build-system]
requires = ["setuptools>=69.0", "wheel>=0.42"]
build-backend = "setuptools.build_meta"

[project]
name = "cute-guys-subscriptions-vip"
version = "1.0.0"
authors = [
  { name = "Cute Guys Team", email = "dev@cuteguys.com" }
]
description = "Sistema profesional de gestión y venta de suscripciones VIP integrado con Telegram"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.13"
classifiers = [
  "Programming Language :: Python :: 3.13",
  "Framework :: AsyncIO",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Topic :: Office/Business :: Financial :: Point-Of-Sale",
  "Topic :: Communications :: Chat :: Telegram"
]
dependencies = [
  "aiogram==3.12.0",
  "pydantic-settings==2.6.0",
  "pydantic==2.9.2",
  "sqlalchemy==2.0.35",
  "asyncpg==0.30.0",
  "alembic==1.13.3",
  "redis==5.2.0",
  "fastapi==0.115.0",
  "uvicorn[standard]==0.31.0",
  "python-multipart==0.0.12",
  "python-dotenv==1.0.1",
  "structlog==24.4.0",
  "aiohttp==3.10.5",
  "cryptography==43.0.1",
  "tenacity==9.0.0",
  "pytest==8.3.3",
  "pytest-asyncio==0.24.0",
  "pytest-cov==5.0.0",
  "mypy==1.11.2",
  "ruff==0.6.9"
]

[project.optional-dependencies]
dev = [
  "ipython==8.27.0",
  "ipdb==0.20.1"
]

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = false
disallow_untyped_calls = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.ruff]
line-length = 120
select = ["E", "W", "F", "I", "B", "C4", "SIM"]
fix = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]
addopts = "-v --cov=app --cov-report=term-missing --cov-fail-under=90"
